# MCP-Demo

./: .bash_profile  .bashrc  .gitconfig  .wget-hsts  README.md  client.py  cline_mcp_settings.json
.aws/: credentials
.cache/Microsoft/DeveloperTools/: deviceid
.config/code-server/: config.yaml
.config/infracost/: .state.json
.local/share/code-server/: coder.json  machineid  serve-web-key-half
.local/share/code-server/CachedExtensionVSIXs/: 4ops.terraform-0.2.1-universal  gruntfuggly.activitusbar-0.0.46-universal
.local/share/code-server/CachedProfilesData/__default__profile__/: extensions.builtin.cache
.local/share/code-server/User/: machineid
.local/share/code-server/extensions/: .obsolete  extensions.json
.local/share/code-server/extensions/4ops.terraform-0.2.1-universal/: .vsixmanifest  package.json
.local/share/code-server/extensions/bierner.markdown-emoji-0.1.0/: package.json
.local/share/code-server/extensions/gruntfuggly.activitusbar-0.0.46-universal/: .vsixmanifest  package.json  (+1 more)
.ssh/: authorized_keys
.terraform.d/: checkpoint_cache  checkpoint_signature
flight-sim-mcp/: .env  README.md  TEST_QUERIES.md  flight-sim-mcp.sh  pyproject.toml  requirements.txt  run_claude.sh
flight-sim-mcp/src/: server.py
flight-sim-mcp/src/data/: mock_data.py
flight-sim-mcp/src/models/: __init__.py  booking.py  flight.py
flight-sim-mcp/src/prompts/: templates.py
flight-sim-mcp/src/resources/: flight_resources.py
flight-sim-mcp/src/tools/: group.py  services.py  tracking.py
flight-sim-mcp/tests/: test_flight_search.py
roo/: mcp.json
(+34 files in other folders)
